<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/holo_orange_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mobile_auth"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/text_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/chat"
        android:textColor="@color/black"
        android:textSize="25dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:cardBackgroundColor="@android:color/holo_orange_light"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/linear_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_phone_no"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:gravity="start"
                android:inputType="phone"
                android:background="@drawable/edit_text_view_shape"
                android:textColorHint="@color/black"
                android:hint="@string/prompt_phone_no"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_otp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_margin="10dp"
                android:background="@color/black"
                android:layout_gravity="center"
                android:text="@string/otp_verification"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>